# tick-data-analytics

./: Makefile  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  selectors.yml
analyses/: 1_es_futures_adjusted_prices.py  2_weekly_bar_counts.py  3_bar_returns_correlation.py  4_monthly_bar_variance_analysis.py  5_jarque_bera_test_bar_returns.py  identified_rolls.csv  snowflake_utils.py
docs/: analysis.md  architecture.md  data_overview.md  instructions.md
infra/: README.md  create_database.sql  create_external_stage.sql  create_file_format.sql  create_s3_integration.sql  create_schemas.sql  create_users.sql  create_warehouse.sql
macros/override/: generate_schema_name.sql
models/equity_index_future/fact/: timeseries__es_equity_index_future__bar_returns_correlation.sql  timeseries__es_equity_index_future__monthly_bar_variance.sql  timeseries__es_equity_index_future__weekly_bar_counts.sql
models/equity_index_future/staging/: config.yml  stg__mock_provider__equity_index_future__tick_data.sql
models/equity_index_future/staging/mock_provider/: sources.yml
models/equity_index_future/transform/: int__es_equity_index_future__continuous.sql  int__es_equity_index_future__dollars_traded_bars.sql  int__es_equity_index_future__tick_bars.sql  int__es_equity_index_future__volume_bars.sql
scripts/: convert_h5_to_parquet_chunks.py  upload_parquet_chunks_to_s3.py
seeds/: dbt_project_evaluator_exceptions.csv
